update css for login

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -35,6 +35,8 @@ page-login {
             width: 100%;
             h1 {
                 font-size: 9vw;
+                text-align: center;
+                color: sandybrown;
             }
             .form {
                 padding: 0 10vw 5vw;
