--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -34,6 +34,7 @@ page-profile {
             display: flex;
             justify-content: center;
             h3 {
+                text-transform: capitalize;
                 color: #E0BB92;
             }
         }
@@ -55,6 +56,36 @@ page-profile {
                 font-size: 7vw;
                 padding-top: 2vw;
                 text-align: left;
+            }
+        }
+        .mask {
+            background: #E0BB92;
+            opacity: 0.7;
+            height: 35vh;
+            position: relative;
+            top: 45px;
+            left: 0;
+            border-radius: 10px;
+        }
+        .details-side {
+            position: absolute;
+            bottom: 6vh;
+            left: 0;
+            width: 100%;
+            color: black;
+            padding: 0 10vw;
+            .detail-info {
+                display: flex;
+                justify-content: space-between;
+                .right {
+                    text-align: right;
+                    .upper-name {
+                        text-transform: uppercase;
+                    }
+                }
+            }
+            h5 {
+                text-align: center;
             }
         }
     }
