--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,7 +5,7 @@ page-home {
     .toolbar-title {
         display: flex;
         justify-content: center;
-        height: 4vh;
+        color: #E0BB92;
         img {
             width: 35vw;
         }
