--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -47,6 +47,9 @@ page-profile {
                 padding: 0 4.5vw;
                 border-right: 1px solid white;
             }
+            .text-center {
+                text-align: center !important;
+            }
             .title-p {
                 color: #E0BB92;
                 font-size: 4vw;
