update css for profile

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -47,6 +47,9 @@ page-profile {
                 padding: 0 4.5vw;
                 border-right: 1px solid white;
             }
+            .win-ratio {
+                width: 23vw;
+            }
             .text-center {
                 text-align: center !important;
             }
