--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -69,29 +69,32 @@ page-profile {
             opacity: 0.7;
             height: 35vh;
             position: relative;
-            top: 45px;
+            bottom: 0;
             left: 0;
             border-radius: 10px;
-        }
-        .details-side {
-            position: absolute;
-            bottom: 6vh;
-            left: 0;
-            width: 100%;
-            color: black;
-            padding: 0 10vw;
-            .detail-info {
-                display: flex;
-                justify-content: space-between;
-                .right {
-                    text-align: right;
-                    .upper-name {
-                        text-transform: uppercase;
+            margin-top: 10vw;
+            .details-side {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                color: black;
+                padding: 5vw;
+                height: 100%;
+                line-height: 90%;
+                .detail-info {
+                    display: flex;
+                    justify-content: space-between;
+                    .right {
+                        text-align: right;
+                        .upper-name {
+                            text-transform: uppercase;
+                        }
                     }
                 }
-            }
-            h5 {
-                text-align: center;
+                h5 {
+                    text-align: center;
+                }
             }
         }
     }
