Finish: Log In - Log Out - Sign Up

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,10 @@
     <ion-content class="content-menu">
         <div class="avatar">
             <img src="./assets/icon/boy.png" alt="" (click)="openProfile()">
+            <div>
+                <button (click)="logOut()">Logout</button>
+            </div>
+
         </div>
         <div class="navigate-info">
             <!-- <ion-list>
@@ -12,6 +16,7 @@
                     <ion-icon name="rose" item-end></ion-icon>
                 </ion-item>
             </ion-list> -->
+
         </div>
     </ion-content>
 </ion-menu>
