--- a/src/pages/list-match/list-match.scss
+++ b/src/pages/list-match/list-match.scss
@@ -1,3 +1,28 @@
 page-list-match {
-
+    .card-ios .item-ios.item-block .item-inner {
+        padding: 0;
+    }
+    .label-ios {
+        margin: 0;
+    }
+    .team-side {
+        background: black;
+        margin: 0;
+        padding: 0;
+    }
+    .team {
+        padding: 20px;
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .vs {
+            color: wheat;
+            align-self: center;
+        }
+        img {
+            width: 70px;
+            height: 40px;
+        }
+    }
 }
