--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,6 +16,13 @@
     color: #E0BB92;
 }
 
+// .bar-buttons-ios[end] {
+//     font-size: 20px;
+// }
+.toolbar-ios {
+    padding: 4px 10px;
+}
+
 .content-menu {
     background: #E0BB92;
     .avatar {
