--- a/src/pages/signup/step1/signup.scss
+++ b/src/pages/signup/step1/signup.scss
@@ -6,85 +6,50 @@ page-signup {
     .header-ios .toolbar-ios:last-child .toolbar-background-ios {
         border-width: 0;
     }
-    .login-content {
-        background: url('../assets/images/bg/login-bg.jpg') no-repeat;
-        background-size: cover;
-        .mask {
-            background: #000000;
-            opacity: 0.7;
-            height: 85vh;
+    .signup-content {
+        .head {
+            background: #c21a24;
+            height: 15vh;
             position: relative;
-            top: 0px;
-            left: 0;
-            border-radius: 10px;
-        }
-        .logo-log {
-            width: 100%;
-            left: 0;
-            text-align: center;
-            h1 {
-                font-size: 8vw;
-                color: sandybrown;
-            }
-        }
-        .login-form {
-            position: absolute;
-            top: 6vh;
-            left: 0;
-            width: 100%;
-            h1 {
-                font-size: 9vw;
+            .logo {
+                width: 100%;
                 text-align: center;
-                color: sandybrown;
+                position: absolute;
+                bottom: -10vw;
+                img {
+                    height: 30vw;
+                    border-radius: 10px;
+                }
             }
-            .form {
+        }
+        .signup {
+            width: 100%;
+            top: 10vw;
+            position: relative;
+            h1 {
+                font-size: 6vw;
+                text-align: center;
+                color: black;
+                font-family: Gill Sans, Verdana;
+            }
+            ion-list {
                 padding: 0 10vw 5vw;
-                .list-form {
-                    margin-bottom: 4.5vh !important;
+                .text-input::-moz-placeholder {
+                    font-size: 3vw;
+                    text-align: right;
                 }
-                .usr-icon {
-                    font-size: 11vw;
-                    color: white;
+                .text-input:-ms-input-placeholder {
+                    font-size: 3vw;
+                    text-align: right;
                 }
-                .list-ios>.item-block {
-                    border-top: 0;
-                    background: none;
-                    color: white;
-                    padding: 0;
-                    .item-inner {
-                        border-bottom: 1px solid #fff;
-                    }
+                .text-input::-webkit-input-placeholder {
+                    text-indent: 0;
+                    font-size: 3vw;
+                    text-align: right;
                 }
-                .list-ios>.item-block:first-child {
-                    border-top: 0;
-                    .item-inner {
-                        border-bottom: 1px solid #fff;
-                    }
-                }
-                .list-ios>.item-block:last-child {
-                    border-bottom: 0;
-                    .item-inner {
-                        border-bottom: 1px solid #fff;
-                    }
-                }
-                .btn-log {
-                    width: 100%;
-                    text-align: center;
-                    button {
-                        width: 45vw;
-                    }
-                }
-                .register-side {
-                    padding-top: 4vw;
-                    p:first-child {
-                        color: white;
-                        text-align: center;
-                    }
-                    p:last-child {
-                        color: sandybrown;
-                        text-align: center;
-                        font-size: 5vw;
-                        margin: 0;
+                .list {
+                    .label-text {
+                        font-size: 4vw;
                     }
                 }
             }
