--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,6 +33,7 @@ ion-header {
 
 .content-menu {
     background: white;
+    font-family: Gill Sans, Verdana;
     .ava-side {
         background: #c21a24;
         height: 25vh;
