--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,6 +3,12 @@ page-login {
         background-color: transparent;
         border: none;
     }
+    .toolbar-title {
+        display: flex;
+        justify-content: center;
+        color: white;
+        font-family: Gill Sans, Verdana;
+    }
     .header-ios .toolbar-ios:last-child .toolbar-background-ios {
         border-width: 0;
     }
@@ -32,25 +38,28 @@ page-login {
             width: 100%;
             top: 20vw;
             position: relative;
+            .text-input {
+                font-size: 4vw;
+            }
             .text-input::-moz-placeholder {
-                font-size: 3vw;
-                text-align: right;
+                font-size: 4vw;
+                text-align: left;
             }
             .text-input:-ms-input-placeholder {
-                font-size: 3vw;
-                text-align: right;
+                font-size: 4vw;
+                text-align: left;
             }
             .text-input::-webkit-input-placeholder {
                 text-indent: 0;
-                font-size: 3vw;
-                text-align: right;
+                font-size: 4vw;
+                text-align: left;
             }
             h1 {
                 font-size: 6vw;
                 text-align: center;
                 color: black;
                 font-family: Gill Sans, Verdana;
-                animation: zoomIn 3s;
+                animation: zoomIn 1s;
             }
             .form {
                 padding: 0 10vw 5vw;
