--- a/src/pages/signup/step1/signup.scss
+++ b/src/pages/signup/step1/signup.scss
@@ -99,6 +99,9 @@ page-signup {
                 padding: 2vw 0;
                 .item-inner {
                     border-bottom: 1px solid lightgray;
+                    .label-gen {
+                        margin: 0;
+                    }
                 }
             }
         }
